adding MessageForm component

--- a/app/assets/stylesheets/chatrooms.scss
+++ b/app/assets/stylesheets/chatrooms.scss
@@ -5,7 +5,7 @@ body{
 }
 
 h1 a {
-  text-decoration: none; 
+  text-decoration: none;
   color: darkred;
 }
 
@@ -16,4 +16,36 @@ h1 a {
   a {
     color: black;
   }
+}
+
+
+input[name='body'] {
+  width:90%;
+}
+
+input[type='submit'] {
+  background: black;
+  color: white;
+  outline: none;
+  border: 0;
+  border:none;
+  margin: 5px;
+  padding: 5px;
+  cursor: pointer;
+}
+
+#messages {
+  border: solid 1px #EAEAEA;
+  padding: 20px;
+  height: 50vh;
+  overflow-y: scroll;
+}
+
+.messageForm {
+  margin-bottom: 20px;
+}
+
+.chatbot {
+  color: #777;
+  font-style: italic;
 }
