--- a/app/views/chatrooms/show.html.erb
+++ b/app/views/chatrooms/show.html.erb
@@ -1,5 +1,6 @@
 <h2><%= @chatroom.name %></h2>
 
-<%= react_component 'Chatroom', props: {chatroom: render(partial: 'chatrooms/chatroom.json', locals: { chatroom: @chatroom })} %>
-
-<%= render partial: 'messages/new', locals: {chatroom: @chatroom} %>
+<%= react_component 'Chatroom',
+      props: {chatroom: render(
+                partial: 'chatrooms/chatroom.json',
+                locals: { chatroom: @chatroom })} %>
